OrientDB refactoring