@@ -1,29 +1,29 @@
 package com.slimgears.rxrepo.query.decorator;
 
-import com.google.common.collect.Sets;
-import com.slimgears.rxrepo.expressions.PropertyExpression;
-import com.slimgears.rxrepo.query.Notification;
-import com.slimgears.rxrepo.query.provider.QueryInfo;
 import com.slimgears.rxrepo.query.provider.QueryProvider;
 import com.slimgears.rxrepo.util.PropertyMetas;
+import com.slimgears.util.autovalue.annotations.HasMetaClassWithKey;
 import com.slimgears.util.autovalue.annotations.MetaClassWithKey;
 import com.slimgears.util.autovalue.annotations.MetaClasses;
+import com.slimgears.util.autovalue.annotations.PropertyMeta;
+import com.slimgears.util.stream.Optionals;
+import com.slimgears.util.stream.Streams;
 import io.reactivex.Completable;
 import io.reactivex.Maybe;
 import io.reactivex.Observable;
 import io.reactivex.Single;
 import io.reactivex.functions.Function;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-@SuppressWarnings({"ReactiveStreamsNullableInLambdaInTransform", "UnstableApiUsage"})
+@SuppressWarnings({"UnstableApiUsage"})
 public class UpdateReferencesFirstQueryProviderDecorator extends AbstractQueryProviderDecorator {
-    private final static Logger log = LoggerFactory.getLogger(UpdateReferencesFirstQueryProviderDecorator.class);
-
     protected UpdateReferencesFirstQueryProviderDecorator(QueryProvider underlyingProvider) {
         super(underlyingProvider);
     }
@@ -35,87 +35,63 @@ public class UpdateReferencesFirstQueryProviderDecorator extends AbstractQueryPr
     @Override
     public <K, S> Completable insert(MetaClassWithKey<K, S> metaClass, Iterable<S> entities, boolean recursive) {
         return recursive
-                ? insertReferences(metaClass, entities).andThen(super.insert(metaClass, entities, true))
+                ? insertReferences(metaClass, entities).andThen(super.insert(metaClass, entities, false))
                 : super.insert(metaClass, entities, false);
+    }
+
+    @Override
+    public <K, S> Completable insertOrUpdate(MetaClassWithKey<K, S> metaClass, Iterable<S> entities, boolean recursive) {
+        return recursive
+                ? insertReferences(metaClass, entities).andThen(super.insertOrUpdate(metaClass, entities, false))
+                : super.insertOrUpdate(metaClass, entities, false);
     }
 
     @Override
     public <K, S> Single<Supplier<S>> insertOrUpdate(MetaClassWithKey<K, S> metaClass, S entity, boolean recursive) {
         return recursive
-                ? insertReferences(metaClass, entity).andThen(super.insertOrUpdate(metaClass, entity, true))
+                ? insertReferences(metaClass, entity).andThen(super.insertOrUpdate(metaClass, entity, false))
                 : super.insertOrUpdate(metaClass, entity, false);
     }
 
     @Override
     public <K, S> Maybe<Supplier<S>> insertOrUpdate(MetaClassWithKey<K, S> metaClass, K key, boolean recursive, Function<Maybe<S>, Maybe<S>> entityUpdater) {
-        return super.insertOrUpdate(metaClass, key, recursive, maybeEntity -> entityUpdater
+        return recursive
+                ? super.insertOrUpdate(metaClass, key, false, maybeEntity -> entityUpdater
                 .apply(maybeEntity)
-                .flatMap(updatedEntity -> recursive
-                        ? insertReferences(metaClass, updatedEntity).andThen(Maybe.just(updatedEntity))
-                        : Maybe.just(updatedEntity)));
-    }
-
-    private <K, S> Completable insertEntity(MetaClassWithKey<K, S> metaClass, S entity, boolean recursive) {
-        return query(QueryInfo
-                .<K, S, S>builder()
-                .metaClass(metaClass)
-                .limit(1L)
-                .predicate(PropertyExpression.ofObject(metaClass.keyProperty()).eq(metaClass.keyOf(entity)))
-                .build())
-                .firstElement()
-                .map(Notification::newValue)
-                .<Supplier<S>>map(e -> () -> e)
-                .switchIfEmpty(Single.defer(() -> insertOrUpdate(metaClass, entity, recursive)))
-                .ignoreElement();
+                .flatMap(updatedEntity -> insertReferences(metaClass, updatedEntity).andThen(Maybe.just(updatedEntity))))
+                : super.insertOrUpdate(metaClass, key, false, entityUpdater);
     }
 
     private <K, S> Completable insertReferences(MetaClassWithKey<K, S> metaClass, S entity) {
+        return insertReferences(metaClass, Collections.singleton(entity));
+    }
+
+    private <S> Completable insertReferences(MetaClassWithKey<?, S> metaClass, Iterable<S> entities) {
         return Observable.fromIterable(metaClass.properties())
                 .filter(PropertyMetas::isReference)
-                .flatMapCompletable(p -> Optional
-                                .ofNullable(p.getValue(entity))
-                                .map(val -> insertEntity(MetaClasses.forTokenWithKeyUnchecked(p.type()), val, true))
-                                .orElseGet(Completable::complete));
+                .flatMapCompletable(p -> insertReferences(p, entities));
     }
 
-    private <K, S> Completable insertReferences(MetaClassWithKey<K, S> metaClass, Iterable<S> entities) {
-        Set<Object> isExistingCache = Sets.newConcurrentHashSet();
-        return Observable.fromIterable(metaClass.properties())
-                .filter(PropertyMetas::isReference)
-                .flatMapCompletable(p -> Observable.fromIterable(entities)
-                        .filter(e -> Optional.ofNullable(p.getValue(e)).isPresent())
-                        .map(p::getValue)
-                        .flatMapMaybe(e -> isExisting(isExistingCache, MetaClasses.forTokenWithKeyUnchecked(p.type()), e)
-                                .flatMapMaybe(isExisting -> {
-                                    if (isExisting) {
-                                        return Maybe.empty();
-                                    } else {
-                                        isExistingCache.add(MetaClasses.forTokenWithKeyUnchecked(p.type()).keyOf(e));
-                                        return Maybe.just(e);
-                                    }
-                                }))
-                        .toList()
-                        .flatMapCompletable(refEntities -> refEntities.isEmpty()
-                                ? Completable.complete()
-                                : insert(MetaClasses.forTokenWithKeyUnchecked(p.type()), refEntities, true)));
+    private <K, S, T> Completable insertReferences(PropertyMeta<S, T> property, Iterable<S> entities) {
+        MetaClassWithKey<K, T> refMeta = MetaClasses.forTokenWithKeyUnchecked(property.type());
+        List<T> referencedObjects = Streams.fromIterable(entities)
+                .map(property::getValue)
+                .filter(Objects::nonNull)
+                .collect(Collectors.groupingBy(this::keyOf, Collectors.reducing((a, b) -> a)))
+                .values().stream()
+                .flatMap(o -> o.map(Stream::of).orElseGet(Stream::empty))
+                .collect(Collectors.toList());
+        return referencedObjects.isEmpty()
+                ? Completable.complete()
+                : insertOrUpdate(refMeta, referencedObjects, true);
     }
 
-    private <K, S> Single<Boolean> isExisting(Set<Object> isExistingCache, MetaClassWithKey<K, S> metaClass, S entity) {
-        K key = metaClass.keyOf(entity);
-        return isExistingCache.contains(key) ?
-                Single.just(true) :
-                existingEntity(metaClass, entity).map(e -> true)
-                        .toSingle(false)
-                        .doOnSuccess(isExisting -> isExistingCache.add(key));
-    }
-
-    private <K, S> Maybe<S> existingEntity(MetaClassWithKey<K, S> metaClass, S entity) {
-        return query(QueryInfo.<K, S, S>builder()
-                .metaClass(metaClass)
-                .limit(1L)
-                .predicate(PropertyExpression.ofObject(metaClass.keyProperty()).eq(metaClass.keyOf(entity)))
-                .build())
-                .map(Notification::newValue)
-                .firstElement();
+    @SuppressWarnings("unchecked")
+    private <K, S> K keyOf(S entity) {
+        return Optional.ofNullable(entity)
+                .flatMap(Optionals.ofType(HasMetaClassWithKey.class))
+                .map(e -> (HasMetaClassWithKey<K, S>)e)
+                .map(e -> e.metaClass().keyOf(entity))
+                .orElse(null);
     }
 }
